# sentence_ner

./: INTERVIEW_DOCUMENTATION_SUMMARY.md  INTERVIEW_PREP_GUIDE.md  INTERVIEW_QA.md  INTERVIEW_QUICK_REFERENCE.md  MODEL2_README.md  NER_Prediction_Final.ipynb  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_integration.py  test_model2.py  test_model2_simple.py
models/: data_processor.pkl  model2_ner.h5
notebooks/: 01_data_exploration.ipynb  02_data_preprocessing.ipynb  03_baseline_model.ipynb  04_advanced_model.ipynb  05_model_evaluation.ipynb
presentation/: Model2_Results_PowerPoint_Style.md  NER_Project_Presentation.md
results/: advanced_predictions.npz  advanced_results.json  baseline_predictions.npz  baseline_results.json  comprehensive_evaluation_report.json  comprehensive_evaluation_report_all_models.json  model2_final_results.json  model2_predictions.npz  model2_results.json  preprocessing_metadata.json  preprocessing_summary.json  processed_data.npz
src/: __init__.py  advanced_model.py  baseline_model.py  data_preprocessing.py  evaluation.py  utils.py
system_design/: architecture_update_summary.md  system_design_document.md
